# my-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  codeql.yml  release.yml
src/core/: base.py  exceptions.py  interfaces.py
src/models/: task.py
src/patterns/: factory.py
src/services/: task_service.py
